Update api-docs and display product quantity
